fix base64 encoding for JEE8